force-app/main/default/objects/Assignment_Group_Member__c/Assignment_Group_Member__c.object-meta.xml
<CustomObject>
    <description>This is second main object of Q-assign. It contains information of user to assign record, number of records already assigned, its quota limits, active records count etc.</description>
    <label>QA Assignment Group Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignment Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>