force-app/main/default/objects/Assignment_Group_Member__c/fields/Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Active_Assignments__c</fullName>
    <label>Active Assignments</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>