force-app/main/default/objects/Assignment_Group_Member__c/fields/Active_Lead_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Active_Lead_Assignments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Lead Assignments</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>