force-app/main/default/objects/Assignment_Group_Member__c/fields/Active_Load__c.field-meta.xml
<CustomField>
    <fullName>Active_Load__c</fullName>
    <label>Active Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>