force-app/main/default/objects/Assignment_Group_Member__c/fields/Assignment_Quota__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Quota__c</fullName>
    <description>If set, this overrides the Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period via this
Assignment Group</description>
    <inlineHelpText>If set, this overrides the Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period via this
Assignment Group</inlineHelpText>
    <label>Assignment Quota</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>