force-app/main/default/objects/Assignment_Group_Member__c/fields/Global_Assignment_Quota__c.field-meta.xml
<CustomField>
    <fullName>Global_Assignment_Quota__c</fullName>
    <description>If set, this overrides the Global Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period across all
Assignment Groups for the specified object type</description>
    <inlineHelpText>If set, this overrides the Global Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period across all
Assignment Groups for the specified object type</inlineHelpText>
    <label>Global Assignment Quota</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>