force-app/main/default/objects/Assignment_Group_Member__c/fields/Last_Assignment_Seq__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Seq__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Assignment Seq</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>