force-app/main/default/objects/Assignment_Group_Member__c/fields/Lead_Quota_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quota_Assigned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Quota Assigned</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>