force-app/main/default/objects/Assignment_Group_Member__c/fields/Max_Assignment_Cap__c.field-meta.xml
<CustomField>
    <fullName>Max_Assignment_Cap__c</fullName>
    <description>If set, this overrides the Max Assignment Cap for this
Assignment Group. Specifies the maximum number of Active
records for the user, above which, no more records will be
assigned by this Assignment Group to this user</description>
    <inlineHelpText>If set, this overrides the Max Assignment Cap for this
Assignment Group. Specifies the maximum number of Active
records for the user, above which, no more records will be
assigned by this Assignment Group to this user</inlineHelpText>
    <label>Max Assignment Cap</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>