force-app/main/default/objects/Assignment_Group_Member__c/fields/Member_OOO_Hours__c.field-meta.xml
<CustomField>
    <fullName>Member_OOO_Hours__c</fullName>
    <defaultValue>&apos;User\&apos;s Default OOO entries&apos;</defaultValue>
    <label>Member OOO Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>User&apos;s Default OOO entries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>