force-app/main/default/objects/Assignment_Group_Member__c/fields/Member_OOO_Source__c.field-meta.xml
<CustomField>
    <fullName>Member_OOO_Source__c</fullName>
    <description>OOO / non-working times</description>
    <inlineHelpText>OOO / non-working times</inlineHelpText>
    <label>OOO / non-working times</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>User&apos;s Default OOO entries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>