force-app/main/default/objects/Assignment_Group_Member__c/fields/Member_Shift_Hours__c.field-meta.xml
<CustomField>
    <fullName>Member_Shift_Hours__c</fullName>
    <defaultValue>&apos;User\&apos;s Default Shift&apos;</defaultValue>
    <label>Member Shift Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>Use a Business Hours schedule</fullName>
            </value>
            <value>
                <fullName>User&apos;s Default Shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>