force-app/main/default/objects/Assignment_Group_Member__c/fields/Member_Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Shift_Type__c</fullName>
    <description>Shift/Working Hours</description>
    <inlineHelpText>Shift/Working Hours</inlineHelpText>
    <label>Shift/Working Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>Use User&apos;s Default Shift</fullName>
                <default>true</default>
                <label>Use User&apos;s Default Shift</label>
            </value>
            <value>
                <fullName>Use a Business Hours schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>