force-app/main/default/objects/Assignment_Group_Member__c/fields/Member_Shift_Type_x_BH_Is_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Member_Shift_Type_x_BH_Is_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reversed - Use hours only OUTSIDE Business Hours</description>
    <inlineHelpText>Reversed - Use hours only OUTSIDE Business Hours</inlineHelpText>
    <label>Reversed - Use hours only OUTSIDE BH</label>
    <type>Checkbox</type>
</CustomField>