force-app/main/default/objects/Assignment_Group_Member__c/fields/Member_Shift_Type_x_Business_Hour_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Shift_Type_x_Business_Hour_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Shift - Business Hour Id</description>
    <inlineHelpText>Default Shift - Business Hour Id</inlineHelpText>
    <label>Default Shift - Business Hour Id</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>QA_Assignment_Group_Members_Shift_BH_Id</relationshipName>
    <type>Lookup</type>
</CustomField>