force-app/main/default/objects/Assignment_Group_Member__c/fields/Next_Assignment_Order__c.field-meta.xml
<CustomField>
    <fullName>Next_Assignment_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Next Assignment Order</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>