force-app/main/default/objects/Assignment_Group_Member__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>Queue to assign to</description>
    <label>Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>