force-app/main/default/objects/Assignment_Group_Member__c/fields/Quota_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Quota_Assigned__c</fullName>
    <label>Quota Assigned</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>