force-app/main/default/objects/Assignment_Group_Member__c/fields/Round_Robin_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Weighting__c</fullName>
    <description>When using Round-Robin mode, this setting specifies if
the user should get more or less records assigned compared to
other users/members. 100% is the default. e.g. a setting of
110% would mean that this user would get an extra record for
every 10 records assigned to other users that have 100% set</description>
    <label>Round Robin Weighting</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>