force-app/main/default/objects/Assignment_Group_Member__c/fields/Round_Robin_Weighting_Accumulation__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Weighting_Accumulation__c</fullName>
    <label>Round Robin Weighting Accumulation</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>